test/1.2/errors/T_EREGVAL.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
bank b {
    register r size 4 @ undefined {
        field f [31:0];
    }
}
method init {
    /// ERROR EREGVAL
    $b.r;
}
